cmake_minimum_required(VERSION 3.1)
project(Leetcode)
add_definitions(-std=c++14)

add_executable(Leetcode main.cpp Data-Structures/indirected_graph.h Data-Structures/directed_graph.h Problems/TODO_Problem1203.h Problems/Problem1197.h Problems/Problem1200.h Problems/Problem1202.h Problems/Problem1028.h Problems/Problem0715.h Data-Structures/segment_tree.h Data-Structures/binary_tree.h Problems/Problem1153.h Problems/Problem1249.h Problems/Problem1248.h Problems/Problem0992.h Problems/Problem1247.h Problems/Problem1245.h Problems/Problem1244.h Problems/Problem1234.h Problems/Problem1538.h Problems/TODO_Problem1536.h Problems/Problem0609.h Problems/Problem1293.h Problems/Problem1535.h Problems/Problem1539.h Problems/TODO_Problem1540.h Problems/Problem0239.h Problems/Problem2000.h Problems/Problem0124.h Problems/Problem0142.h Data-Structures/forward_linked_list.h Utils/data_structure.h Problems/Problem1265.h)